feat(i18n): add more localization strings

--- a/src/app/test-management/test-management.component.html
+++ b/src/app/test-management/test-management.component.html
@@ -219,9 +219,9 @@
 
           <div class="no-testsuites">
             <img src="assets/add-project.png">
-            <h4>You have not created Test Suite yet.</h4>
-            <p class="tips">Tap the 'Create Test Suite' button to get started</p>
-            <a  class="btn btn-primary">Create Test Suite</a>
+            <h4>{{ 'TESTMANAGEMENTPAGE.EMPTYSTATE_NOTESTSUITES_TITLE' | translate }}</h4>
+            <p class="tips">{{ 'TESTMANAGEMENTPAGE.EMPTYSTATE_NOTESTSUITES_DESCRIPTION' | translate }}</p>
+            <a  class="btn btn-primary">{{ 'TESTMANAGEMENTPAGE.EMPTYSTATE_CREATETESTSUITE_BUTTON' | translate }}</a>
           </div>
 
         </div>
