--- a/src/app/settings/users/create-user-modal/create-user-modal.component.html
+++ b/src/app/settings/users/create-user-modal/create-user-modal.component.html
@@ -1,4 +1,4 @@
-<clr-modal *ngIf="user" [(clrModalOpen)]="opened">
+<clr-modal *ngIf="opened" [(clrModalOpen)]="opened">
   <h3 class="modal-title">{{ 'USERCREATEPAGE.TITLE' | translate }}</h3>
   <div class="modal-body">
     <form (ngSubmit)="setOpened(false); createUser()" id="createUserForm" #createUserForm="ngForm" (keyup.enter)="createUserForm.form.valid && createUserForm.ngSubmit.emit();">
@@ -22,6 +22,25 @@
           <label class="required" for="email">{{ 'USERCREATEPAGE.EMAIL' | translate }}</label>
           <input type="text" id="email" name="email" [(ngModel)]="user.email" #email="ngModel" required placeholder="{{ 'USERCREATEPAGE.EMAIL_PLACEHOLDER' | translate }}"
             size="35">
+        </div>
+
+        <div class="form-group">
+          <label class="required" for="password">{{ 'USERCREATEPAGE.PASSWORD' | translate }}</label>
+          <input type="password" id="password" name="password" placeholder="password" [(ngModel)]="user.password" #password="ngModel"
+            required size="35" validateEqual="confirmPassword" reverse="true">
+          <small [hidden]="password.valid || (password.pristine && !createUserForm.submitted)">
+            Password is required
+          </small>
+        </div>
+
+        <div class="form-group">
+          <label class="required" for="confirmPassword">{{ 'USERCREATEPAGE.CONFIRMPASSWORD' | translate }}</label>
+          <input type="password" id="confirmPassword" name="confirmPassword" required placeholder="confirm password" [(ngModel)]="user.confirmPassword"
+            #confirmPassword="ngModel" size="35" validateEqual="password">
+          <p *ngIf="confirmPassword?.errors?.isEqual">Passwords don't match</p>
+          <small [hidden]="confirmPassword.valid || (confirmPassword.pristine && !createUserForm.submitted)">
+            Password mismatch
+          </small>
         </div>
 
         <br>
