fix(ui): fix test suites ui for small screens when for large more width

--- a/src/app/project-layout/project-layout.component.html
+++ b/src/app/project-layout/project-layout.component.html
@@ -5,6 +5,7 @@
   </clr-vertical-nav>
 
   <div class="content-area">
+    <!-- content-area should not contain paddings or margins for secondary sidenav -->
     <router-outlet></router-outlet>
   </div>
 </div>
